# gtest_practice

./: README.md
gtest_on_embedded_c/queue/: CMakeLists.txt  run.sh
gtest_on_embedded_c/queue/include/: queue.h
gtest_on_embedded_c/queue/src/: main.cpp  queue.c
quick_start_bazel/: README.md  hello_test.cc
tdd_led_driver/: CMakeLists.txt
tdd_led_driver/include/: LedDriver.h  MockRuntimeError.h
tdd_led_driver/src/: LedDriver.cc
tdd_led_driver/test/: LedDriverTest.cc  MockRuntimeError.cc  RuntimeError.h
